<resources>
    <string name="app_name">MVP Homework</string>
    <string name="counter1">Счетчик 1</string>
    <string name="counter2">Счетчик 2</string>
    <string name="counter3">Счетчик 3</string>
    <string name="onboarding_message">Нажимайте на кнопку и увеличивайте ее счетчик</string>
    <string name="counter_message">Счетчик увеличен!</string>
    <string name="you_are_reading_about_user">You are reading about user:</string>
    <string name="error_message">Error while receiving data</string>
    <string name="convert_to_png">Convert to PNG</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="try_again_later">Try again later</string>
    <string name="converted">Successfully converted!</string>
    <string name="canceled">Operation was canceled by user</string>
    <string name="granted">Permission granted!</string>
    <string name="cancel">Cancel</string>
    <string name="permissions_granted">Permission to save images granted! Press the button again</string>
    <string name="permissions_denied">This app can\'t work properly without storage access</string>
    <string name="repositories">Repositories:</string>
    <string name="repos_error">Error while receiving repositories</string>
    <string name="forks">Forks:</string>
    <string name="forks_error">Error while receiving forks</string>
</resources>