<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/counter1"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCounter1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:tag="0"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_1"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_1"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/counter2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_1"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/btnCounter1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCounter2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:tag="1"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_2"
        app:layout_constraintStart_toStartOf="@+id/tv_2"
        app:layout_constraintTop_toBottomOf="@+id/tv_2"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/counter3"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_1"
        app:layout_constraintStart_toStartOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/btnCounter2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCounter3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:tag="2"
        android:text="0"
        app:layout_constraintEnd_toEndOf="@+id/tv_3"
        app:layout_constraintStart_toStartOf="@+id/tv_3"
        app:layout_constraintTop_toBottomOf="@+id/tv_3"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>